# dragonglass_old

./: Cargo.toml  README.md  TODOs.org  build.rs  logfile  rust-toolchain
assets/shaders/: shader.frag.glsl  shader.frag.spv  shader.vert.glsl  shader.vert.spv
examples/: Cargo.toml  README.md  build.rs
examples/assets/shaders/: equirectangular_to_cubemap.frag.glsl  filtercube.vert.glsl  genbrdflut.frag.glsl  gui.frag.glsl  gui.vert.glsl  pbr.frag.glsl  pbr.vert.glsl  shader.frag.glsl  shader.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
examples/scene/: README.md  main.rs
shaders/: shader.frag.glsl  shader.frag.spv  shader.vert.glsl  shader.vert.spv
src/: app.rs  buffer.rs  command.rs  command_pool.rs  context.rs  debug.rs  error.rs  gltf.rs  main.rs  platform.rs  render_state.rs  renderer.rs  shader.rs  surface.rs  swapchain.rs  vertex.rs
src/core/: Cargo.toml  debug_layer.rs  error.rs  image_view.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  queue_family_index_set.rs  surface.rs  swapchain.rs
src/core/src/: camera.rs  components.rs  input.rs  lib.rs
src/dragonglass/: Cargo.toml
src/dragonglass/src/: app.rs
src/model/: gltf.rs  mod.rs
src/render/: component.rs  framebuffer.rs  mod.rs  pipeline.rs  renderer.rs  renderpass.rs  system.rs
src/render/system/: prepare_renderer.rs  transformation.rs
src/renderer/backend/vulkan/: Cargo.toml  README.md  build.rs
src/renderer/backend/vulkan/src/: lib.rs
src/renderer/backend/vulkan/src/core/: context.rs  debug_layer.rs  image_view.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  queue_family_index_set.rs  surface.rs  swapchain.rs
src/renderer/backend/vulkan/src/model/: gltf.rs  gltf_texture.rs  mod.rs  pbr_asset.rs
src/renderer/backend/vulkan/src/pipelines/: gltf.rs  gui.rs  mod.rs  pbr.rs  skybox.rs
src/renderer/backend/vulkan/src/pipelines/gltf/: gltf.rs  mod.rs  pipeline.rs  texture_bundle.rs
src/renderer/backend/vulkan/src/render/: component.rs  framebuffer.rs  gltf.rs  mod.rs  pipeline.rs  pipeline_gltf.rs  renderer.rs  renderpass.rs  shader_compilation.rs  texture_bundle.rs  vulkan_swapchain.rs
src/renderer/backend/vulkan/src/render/environment/: brdflut.rs  hdr.rs  irradiance.rs  mod.rs  offscreen.rs  prefilter.rs
src/renderer/backend/vulkan/src/render/system/: animation.rs  mod.rs  prepare_renderer.rs  render.rs
src/renderer/backend/vulkan/src/resource/: buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set_layout.rs  dummy.rs  gltf_asset.rs  mod.rs  pipeline_layout.rs  sampler.rs  shader.rs  texture.rs  texture_description.rs
src/renderer/backend/vulkan/src/sync/: fence.rs
src/renderer/backend/vulkan/src/systems/: render.rs
src/renderer/backend/vulkan/support/: Cargo.toml
src/renderer/backend/vulkan/support/src/: lib.rs  shader_compilation.rs
src/renderer/model/gltf/: Cargo.toml
src/renderer/model/gltf/src/: gltf.rs
src/resource/: buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set_layout.rs  mod.rs  pipeline_layout.rs  sampler.rs  shader.rs  texture.rs
src/sync/: fence.rs  mod.rs  semaphore.rs  synchronization_set.rs
