[package]
name = "vulkan-tutorial-rust"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
winit = "0.19.5"
ash = "0.29.0"
env_logger = "0.7.1"
log = "0.4.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "libloaderapi"] }
