[package]
name = "dragonglass-examples"
version = "0.1.0"
authors = ["matthewjberger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[[bin]]
name = "scene"
path = "scene/main.rs"

[dependencies]
imgui = "0.3.0"
imgui-winit-support = "0.3.1"
env_logger = "0.7.1"
log = "0.4.8"
winit = "0.21"
nalgebra-glm = "0.7.0"
snafu = "0.6.7"
legion = "0.2.1"
dragonglass-core = { path = "../src/core", version = "0.1.0" }

# TODO: This needs to be behind a feature flag
dragonglass-backend-vulkan = { path = "../src/renderer/backend/vulkan", version = "0.1.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "libloaderapi"] }

[build-dependencies]
glob = "0.3.0"
