[package]
name = "dragonglass"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
winit = "0.19.5"
nalgebra-glm = "0.5.0"
env_logger = "0.7.1"
log = "0.4.8"
snafu = "0.6.0"
legion = "0.2.1"
dragonglass-core = { path = "../core", version = "0.1.0" }

# This needs to be behind a feature flag
dragonglass-backend-vulkan = { path = "../renderer/backend/vulkan", version = "0.1.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "libloaderapi"] }
