[package]
name = "dragonglass-backend-vulkan"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
imgui = "0.3.0"
winit = "0.21"
ash = "0.30.0"
env_logger = "0.7.1"
log = "0.4.8"
nalgebra = "0.21.0"
nalgebra-glm = "0.7.0"
snafu = "0.6.7"
image = "0.23.12"
petgraph = "0.5.0"
legion = "0.2.1"
gltf = { version = "0.15.2", features = ["names"] }
vk-mem = "0.2.2"
glob = "0.3.0"
raw-window-handle = "0.3.3"
dragonglass-core = { path = "../../../core", version = "0.1.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "libloaderapi"] }
